# kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  go.mod  go.sum  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-push
.github/: .release-please-manifest.json  release-please-config.json
.github/tests/: pre-push-hook.bats
.github/workflows/: build.yml  changelog-rewrite.yml  ci.yml  coverage.yml  job-integration.yml  lint.yml  release-please.yml
contracts/: README.md
contracts/parity/: parity.json  parity_test.go
docs/: 2026-04-18-cli-demo-media-workflow-design.md  README.md  alias-api.md  bus-api.md  cli-api-reference.md  cli-parity-guide.md  completion-api.md  compliance-api.md  engine-protocol.md  engine-security.md  extending-kit.md  getting-started-cli.md  help-rendering.md  log-api.md  project-template-guide.md  py-api-reference.md  release-checklist.md  secret-management-guide.md  storage-abstractions.md  toolspec-api.md  ts-api-reference.md  tui-component-gallery.md  wizard-api.md
docs/2026-04-18-cli-demo-media-workflow-design/: assets-branch-strategy-v1.mmd
docs/adr/: 0001-cli-framework-selection.md  0002-theme-architecture.md  0003-output-hints-pipeline.md  README.md
examples/: README.md
incubator/: README.md
templates/: README.md  build.sh  reserve-packages.sh  scaffold.sh  setup-release-please.sh  test-e2e.sh  test-scaffold-e2e.sh
templates/cli-py/: README.md  pyproject.toml
templates/cli-py/src/{{app_name}}/: __init__.py  cli.py
(+271 files in other folders)
