[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{app_name}}"
version = "0.0.0"
description = "{{description}}"
readme = "README.md"
license = "{{license}}"
requires-python = ">=3.12"
authors = [
    { name = "{{author_name}}", email = "{{author_email}}" },
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
"{{app_name}}" = "{{app_name}}.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{app_name}}"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
